--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -45,11 +45,13 @@
         </nav>
         <div class="container">
             <?php echo $this->content; ?>
+        </div> <!-- /container -->
+        <div class="container">
             <hr>
             <footer>
                 <p>&copy; 2005 - <?php echo date('Y') ?> by Webshop</p>
             </footer>
-        </div> <!-- /container -->
+        </div>
         <?php echo $this->inlineScript() ?>
     </body>
 </html>
