--- a/module/Category/view/category/category/index.phtml
+++ b/module/Category/view/category/category/index.phtml
@@ -2,25 +2,36 @@
 $title = 'Categories';
 $this->headTitle($title);
 ?>
-<h1><?php echo $this->escapeHtml($title); ?></h1>
 
-<table class="table">
-    <tr>
-        <th>Titel</th>
-    </tr>
-    <?php foreach ($categories as $category) : ?>
+<div class="col-md-6">
+    <h1><?php echo $this->escapeHtml($title); ?></h1>
+    <table class="table">
         <tr>
-            <td>
-                <a href="<?php echo $this->url('category',
-                    array('action'=>'view', 'id' => $category->getId()));?>">
-                    <?php echo $this->escapeHtml($category->getTitle())?>
-                </a>
-            </td>
+            <th>Titel</th>
         </tr>
-    <?php endforeach; ?>
-</table>
+        <?php foreach ($categories as $category) : ?>
+            <tr>
+                <td>
+                    <a href="<?php echo $this->url('category',
+                        array('action'=>'view', 'id' => $category->getId()));?>">
+                        <?php echo $this->escapeHtml($category->getTitle())?>
+                    </a>
+                </td>
+            </tr>
+        <?php endforeach; ?>
+    </table>
+</div>
 
-<a class="btn btn-default" href="<?php echo $this->url('category',
-    array('action'=>'clearSession'));?>">
-    Sessie legen
-</a>
+<div class="col-md-6">
+    <h2>Winkelwagen</h2>
+    <dl>
+        <?php foreach ($cart as $product) : ?>
+            <dt><?=$product['title']?></dt>
+            <dd><?=$product['desc']?></dd>
+        <?php endforeach; ?>
+    </dl>
+    <a class="btn btn-default btn-sm" href="<?php echo $this->url('category',
+        array('action'=>'clearSession'));?>">
+        Winkelwagen legen
+    </a>
+</div>
