First steps Order module

--- a/module/Category/view/category/category/index.phtml
+++ b/module/Category/view/category/category/index.phtml
@@ -34,4 +34,8 @@ $this->headTitle($title);
         array('action'=>'clearSession'));?>">
         Winkelwagen legen
     </a>
+    <a class="btn btn-success btn-sm" href="<?php echo $this->url('cart',
+        array('action'=>'order'));?>">
+        Bestellen
+    </a>
 </div>
