--- a/module/Category/view/category/category/index.phtml
+++ b/module/Category/view/category/category/index.phtml
@@ -24,12 +24,16 @@ $this->headTitle($title);
 
 <div class="col-md-6">
     <h2>Winkelwagen</h2>
-    <dl>
-        <?php foreach ($cart as $product) : ?>
-            <dt><?=$product['title']?> <span class="pull-right"><?=$product['quantity']?> stuks</span></dt>
-            <dd><?=$product['desc']?></dd>
-        <?php endforeach; ?>
-    </dl>
+    <?php if (!empty($cart)) { ?>
+        <dl>
+            <?php foreach ($cart as $product) : ?>
+                <dt><?=$product['title']?> <span class="pull-right"><?=$product['quantity']?> stuks</span></dt>
+                <dd><?=$product['desc']?></dd>
+            <?php endforeach; ?>
+        </dl>
+    <?php } else { ?>
+        <p>Er zitten geen producten in uw winkelwagen</p>
+    <?php } ?>
     <a class="btn btn-default btn-sm" href="<?php echo $this->url('category',
         array('action'=>'clearSession'));?>">
         Winkelwagen legen
