Removed return false

--- a/module/Category/view/category/category/index.phtml
+++ b/module/Category/view/category/category/index.phtml
@@ -38,8 +38,8 @@ $this->headTitle($title);
         array('action'=>'clearSession'));?>">
         Winkelwagen legen
     </a>
-    <a class="btn btn-success btn-sm" href="<?php echo $this->url('cart',
-        array('action'=>'order'));?>">
+    <a class="btn btn-success btn-sm" href="<?php echo $this->url('order',
+        array('action'=>'index'));?>">
         Bestellen
     </a>
 </div>
