Order works and saves into database

--- a/module/Order/view/order/order/index.phtml
+++ b/module/Order/view/order/order/index.phtml
@@ -33,7 +33,7 @@ $totalprice = 0;
     <?php } else { ?>
         <p>Er zitten geen producten in uw winkelwagen</p>
     <?php } ?>
-    <a class="btn btn-success btn-sm" href="<?php echo $this->url('cart',
+    <a class="btn btn-success btn-sm" href="<?php echo $this->url('order',
         array('action'=>'order'));?>">
         Bestellen
     </a>
